# wp-scanner

./: Cargo.toml  README.md  builtin_patterns.json
.github/workflows/: deploy-pages.yml
src/: cli.rs  config.rs  main.rs  models.rs  wordpress_api.rs
src/output/: console.rs  email.rs  html.rs  json.rs  markdown.rs  mod.rs
src/scanner/: backdoor.rs  discovery.rs  mod.rs  permissions.rs  plugins.rs  version.rs
website/: index.html  index.php
website/css/: aurora.min.css  geo3d.js
