[package]
name = "wp-scanner"
version = "0.1.0"
edition = "2021"
description = "WordPress security scanner & monitoring tool"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
libc = "0.2"
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
walkdir = "2"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "sendmail-transport", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
